--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/react-dom": "18.2.8",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
+    "hono": "^3.7.3",
     "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.4",
     "typescript": "5.2.2"
   },
   "devDependencies": {
